<resources>
    <string name="app_name">HSVColorPicker</string>
    <string name="action_about">About</string>
    <!-- TODO: replace your name -->
    <string name="author" translatable="false">Josh Saikaly (saik0116)</string>
    <string name="alpha">Transparency (Alpha)</string>
    <string name="black">Black</string>
    <string name="blue">Blue</string>
    <string name="cyan">Cyan</string>
    <string name="green">Green</string>
    <string name="magenta">Magenta</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>

    <string name="olive">Olive</string>
    <string name="lime">Lime</string>
    <string name="silver">Silver</string>
    <string name="gray">Gray</string>
    <string name="purple">Purple</string>
    <string name="teal">Teal</string>
    <string name="navy">Navy</string>
    <string name="maroon">Maroon</string>
    <string name="hue">Hue</string>
    <string name="sat">Saturation</string>
    <string  name="bright">Value/Brightness</string>


    <string name="hueProgress">Hue: %1d\u00B0</string>
    <string name="satProgress">Saturation: %1d"\uFF05"</string>
    <string name="brProgress">"Brightness: %1d"\uFF05" "</string>

</resources>
